@@ -44,7 +44,12 @@ dependencies {
 
 	annotationProcessor(implementation("io.github.llamalad7:mixinextras-common:${mixinextras_version}")) // MixinExtras
 
-	modImplementation("com.rbasamoyai:ritchiesprojectilelib:${rpl_version}+mc.${minecraft_version}-common-build.${rpl_build}") { transitive = false } // Ritchie's Projectile Library
+	// Ritchie's Projectile Library
+	if (Boolean.valueOf(use_local_rpl_build)) {
+		modImplementation("com.rbasamoyai:ritchiesprojectilelib:${rpl_version}+mc.${minecraft_version}-common") { transitive = false }
+	} else {
+		modImplementation("com.rbasamoyai:ritchiesprojectilelib:${rpl_version}+mc.${minecraft_version}-common-build.${rpl_build}") { transitive = false }
+	}
 
 	modImplementation("curse.maven:copycats-968398:${copycats_fabric_file}")
 }
