@@ -31,7 +31,10 @@ flywheel_forge_version=0.6.10-105
 # Other libraries
 mixinextras_version=0.3.5
 rpl_version=2.0.0-dev
-rpl_build=178
+rpl_build=179
+# To use this, put the Ritchie's Projectile Library jars in the libs/ folder of each subproject.
+# IMPORTANT: Keep this FALSE on remote, do not commit this file with this value set to true.
+use_local_rpl_build=false
 
 # Do not push changes.
 fabric_recipe_viewer=emi
